# edge-connect

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INDEPENDENCE_VERIFICATION.md  INSTALLATION.md  LICENSE  PROJECT_SUMMARY.md  QUICK_START.md  README.md  USAGE.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
colab/: EdgeConnect_Face_Reconstruction.ipynb
examples/: README.md
notebooks/: face_reconstruction.ipynb
scripts/: batch_process.py  process_user_image.py  test_reconstruction.py
src/: __init__.py  face_reconstructor.py  utils.py
tests/: test_utils.py
